# korean-text-matcher

./: LICENSE  README.md  pyproject.toml
korean_text_matcher/: similarity_matcher.py
