# korean_text_matcher_package/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-text-matcher" # PyPI에 등록될 패키지 이름 (고유해야 함)
version = "0.1.0"           # 패키지 버전
authors = [
  { name="Kim Jeonhee", email="jeonhee.kim@powergen.ai" }, # 당신의 이름과 이메일로 변경하세요
]
description = "A Python package for phonetic Korean text matching with enhanced first-character weighting."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: Korean",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["korean", "text matching", "similarity", "한글", "유사도", "phonetic"]

[project.urls]
Homepage = "https://github.com/yourusername/korean-text-matcher" # (선택 사항) 당신의 GitHub 레포지토리 URL로 변경하세요
"Bug Tracker" = "https://github.com/yourusername/korean-text-matcher/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["korean_text_matcher*"]